# pkgbuildsearch

./: .gitignore  Caddyfile  Cargo.toml  LICENSE  README.md  config.cfg.in  import-meilisearch.py  update-git.py
src/: main.rs  search.rs  searchweb.rs
static/: app.js  index.html
web/: Cargo.toml  indexer.toml
web/src/: indexer.rs  main.rs
web/templates/: index.html
