[package]
name = "pkgbuildsearch"
version = "0.1.0"
authors = ["Jelle van der Waa <jelle@vdwaa.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "indexer"
path = "src/main.rs"

[[bin]]
name = "search"
path = "src/search.rs"

[[bin]]
name = "searchweb"
path = "src/searchweb.rs"

[dependencies]
tantivy = "0.10.3"
serde_json = "1.0.41"
clap = "2.33.0"
actix-web = "1.0.9"
serde = "1.0.102"
