[package]
name = "pkgbuildsearchweb"
version = "0.0.1"
authors = ["Jelle van der Waa <jelle@vdwaa.nl>"]
edition = "2018"

[dependencies]
env_logger = "0.7"
log = "0.4"
tera = "1.0"
actix-http = "1.0.1"
actix-web = "2.0.0"
actix-rt = "1.0.0"
meilisearch-sdk="0.1"
serde = {version="1.0", features=["derive"]}
structopt = "0.3"
